# game_of_life_raylib

./: CMakeLists.txt
src/: config.hpp  draw.hpp  main.cpp  rules.hpp  sim_frame.hpp
src/raywrap/: Draw.hpp  Drawler.cpp  Drawler.hpp  Keyboard.cpp  Keyboard.hpp  Vector2.hpp  Window.cpp  Window.hpp
